@@ -468,6 +468,7 @@ SOURCES =
 	logger
 	file_pool
 	lsd
+	disk_buffer_pool
 	disk_io_thread
 	enum_net
 	broadcast_socket
