@@ -487,7 +487,7 @@ void generate_torrent(std::vector<char>& buf, int size)
 /*
 	size_type s = total_size;
 	int i = 0;
-	while (s)
+	while (s > 0)
 	{
 		char buf[100];
 		snprintf(buf, sizeof(buf), "t/stress_test%d", i);
